fixed overflow at body element, re-disgn login & signin form, alignment Adjusted for banner text and cards.

--- a/src/input.css
+++ b/src/input.css
@@ -4,6 +4,7 @@
 
 body{
     padding-top: 560px;
+    overflow-x: hidden;
 }
 
 .bg-card-color{
